--- a/client/package.json
+++ b/client/package.json
@@ -17,13 +17,13 @@
     "deep-equal": "^1.0.1",
     "electron": "^9.1.2",
     "google-protobuf": "^3.12.4",
-    "mediasoup-client": "^3.1.6"
+    "mediasoup-client": "^3.1.6",
+    "vue": "^2.6.11"
   },
   "devDependencies": {
-    "rollup": "^1.12.4",
-    "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-resolve": "^5.0.0"
+    "rollup-plugin-node-resolve": "^5.2.0"
   }
 }
