--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "deep-equal": "^1.0.1",
     "express": "^4.16.4",
+    "express-ws": "^4.0.0",
     "mediasoup": "^3.1.5"
   },
   "devDependencies": {}
