--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webrtc-ffmpeg-server",
+  "name": "monitor-server",
   "version": "0.1.0",
   "description": "Mediasoup is main framework",
   "main": "server.js",
@@ -12,6 +12,7 @@
     "deep-equal": "^1.0.1",
     "express": "^4.16.4",
     "express-ws": "^4.0.0",
+    "log4js": "^6.3.0",
     "mediasoup": "^3.1.5"
   },
   "devDependencies": {}
